--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+/.pnp
+.pnp.js
 
 # TypeScript v1 declaration files
 typings/
@@ -72,6 +74,17 @@ typings/
 .env
 .env.test
 
+# testing
+/coverage
+# production
+/build
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 
@@ -98,6 +111,7 @@ dist
 .fusebox/
 
 # DynamoDB Local files
+/dynamodb_local_latest
 .dynamodb/
 
 # TernJS port file
