--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "aws-sdk": "^2.1066.0",
     "express": "^4.17.2",
     "if-env": "^1.0.4",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2",
     "watch": "^1.0.2",
     "watchman": "^1.0.0"
