--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^5.0.0"
+  },
+  "peerDependencies": {
+    "react": ">=16.13.",
+    "react-dom": ">=16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
